Set card images to auto height to avoid cropping. (#940)

--- a/site/_scss/blocks/_blog-card.scss
+++ b/site/_scss/blocks/_blog-card.scss
@@ -10,6 +10,6 @@
 
 .blog-card__thumbnail {
   img {
-    height: px-to-rem(184px);
+    max-height: px-to-rem(184px);
   }
 }
